tests/ui/ferrocene/compiler-arguments/color/color_never.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/color_never.rs:5:13
   |
LL |     let x = x;
   |             ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
